background color css style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Department 702 Phlebotomist</title>
+
+  <style media="screen">
+    body {
+      background-color: #f1fcfc
+    }
+  </style>
+
+
+
 </head>
 
 <body>
