added css style link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <title>Department 702 Phlebotomist</title>
 
+  <link rel="stylesheet" href="styles.css">
+
+  
   <style media="screen">
     body {
       background-color: #f1fcfc
