full index update

--- a/index.html
+++ b/index.html
@@ -4,32 +4,96 @@
 <head>
   <meta charset="utf-8">
   <title>Department 702 Phlebotomist</title>
-
-  <link rel="stylesheet" href="styles.css">
-
-  
-  <style media="screen">
-    body {
-      background-color: #f1fcfc
-    }
-  </style>
-
-
+  <link rel="stylesheet" href="C:\Users\emper\Desktop\PhlebTrainingSite\CSS-PhlebSite\styles.css">
 
 </head>
 
 <body>
   <h1>Department 702 Phlebotomist Training Checklist</h1>
-  <h2><a href="SkillCompetency.html">Skill/Competency</a></h2>
+  <br>
+  <h2>Skill/Competency</h2>
+  <ul>
+    <li><a href="DepartmentOrentation-MailboxLocation.html">Department Orientation / Mailbox Location</a></li>
+    <li><a href="OnCall.html">On-call / Call-back / Shift Trades</a></li>
+    <li><a href="PatientRightsRefusal.html">Patient Rights / Refusal</a></li>
+    <li><a href="AIDET.html">AIDET</a></li>
+    <li><a href="BuddySystemBreaks.html">Breaks: Buddy System</a></li>
+    <li><a href="HandHygieneOE.html">Hand Hygiene Observation Entry</a></li>
+    <li><a href="NetLearning.html">Net Learning</a></li>
+    <li><a href="PSSTraining.html">PSS Training</a></li>
+  </ul>
+  <hr>
+
+  <h2>Meditech/PSS/API</h2>
+  <ul>
+    <li><a href="SignInOutPasswordSecurity.html">Sign In/Out & Password Security</a></li>
+    <li><a href="PrintLabels.html">Print Labels</a></li>
+    <li><a href="ReceiveSpecimens.html">Receive Specimens</a></li>
+    <li><a href="EditCollectionDate.html">Edit Collection Date</a></li>
+    <li><a href="EditBloodBankWristband.html">Edit Blood Bank Wristband</a></li>
+    <li><a href="ResultInquiry.html">Result Inquiry</a></li>
+    <li><a href="OutstandingReport.html">Outstanding Report</a></li>
+    <li><a href="SpecimenStorage.html">Specimen Storage</a></li>
+    <li><a href="OutlookEmail.html">Outlook Email</a></li>
+    <li><a href="HIVConsent.html">HIV Consent</a></li>
+    <li><a href="RecompileSpecimens.html">Recompile Specimens</a></li>
+  </ul>
 
   <hr>
-  <h2><a href="MeditechPSSAPI.html">Meditech/PSS/API</a></h2>
+
+  <h2>Outreach</h2>
+  <ul>
+    <li><a href="Admissions.html">Admissions</a></li>
+    <li><a href="BoneJointCenterAccounts.html">Bone and Joint Center Accounts</a></li>
+    <li><a href="CoumadinCliniAccountsandQuestionnaire.html">Coumadin Clinic Accounts & Coumadin Clinic Questionnaire</a></li>
+    <li><a href="EmployeeHealth.html">Employee Health</a></li>
+    <li><a href="LCA.html">LCA</a></li>
+    <li><a href="Nonpats.html">Nonpats</a></li>
+    <li><a href="Quest.html">Quest</a></li>
+    <li><a href="ScanOrderMeditech.html">Scan Order into Meditech</a></li>
+  </ul>
+
+
   <hr>
-  <h2><a href="Outreach.html">Outreach</a></h2>
+
+  <h2>API</h2>
+  <ul>
+    <li><a href="AddClocking.html">Add Clocking</a></li>
+    <li><a href="DeletePunch.html">Delete Punch</a></li>
+    <li><a href="ManualStayCallback.html">Manual Stay Callback</a></li>
+    <li><a href="TimeCardReviewSignOff.html">Time Card Review / Sign-off</a></li>
+
+  </ul>
+
+
   <hr>
-  <h2><a href="API.html">API</a></h2>
+
+  <h2>Lab Duties</h2>
+  <ul>
+    <li><a href="AddOnTestsEtc.html">Add on tests to blood lab</a></li>
+    <li><a href="WriteCantGets.html">Can't Gets</a></li>
+    <li><a href="BloodCultureKits.html">Blood Culture Kits</a></li>
+    <li><a href="StockSupplies.html">Stock Supplies</a></li>
+    <li><a href="CleanUpDrawingRoom.html">Clean Up Drawing Room</a></li>
+    <li><a href="DrawinSDSetc.html">Draw in SDS, OR, RR, & ER</a></li>
+      <li><a href="OutstandingReport.html">
+          <h2>Outstanding Reports</h2>
+        </a></li>
+      <li><a href="WatchPSSManager.html">
+          <h2>Watch PSS Manager</h2>
+        </a></li>
+      <li><a href="Processing.html">
+          <h2>Processing</h2>
+        </a></li>
+    <li><a href="OutpatientLab.html">
+        <h2>Outpatient Lab</h2>
+      </a></li>
+
+  </ul>
+
+
   <hr>
-  <h2><a href="LabDuties.html">Lab Duties</a></h2>
+
 </body>
 
 </html>
