fixed styels.css link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Department 702 Phlebotomist</title>
-  <link rel="stylesheet" href="C:\Users\emper\Desktop\PhlebTrainingSite\CSS-PhlebSite\styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 
